--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -216,7 +216,7 @@
             "[(!type.revive_non_zombie){zombie allies}] ",
             "[(type.range_type>=2){that once being }]",
             "in the range of (dis_0)~(dis_1) ",
-            "[(type.range_type==0){when this entity is on the stage ans walking/waiting/attacking}]",
+            "[(type.range_type==0){when this entity is on the stage and walking/waiting/attacking}]",
             "[(type.range_type==1){when this entity is present on the stage}]",
             "[(type.range_type==2){as long as this entity is present on the stage}]",
             "[(type.range_type==3){effective forever}].}]"
@@ -545,11 +545,11 @@
         }
     },
     "POISON": {
-        "abbr_name": "BCU poison",
-        "full_name": "Custom Poison",
+        "abbr_name": "venom",
+        "full_name": "Venom",
         "tooltip": null,
         "format": [
-            "(prob)% chance to poison target with a duration of (_dispTime(time)). ",
+            "(prob)% chance to venom target with a duration of (_dispTime(time)). ",
             "Deal [(type.damage_type==0){(damage) damage}",
             "(type.damage_type>0){a damage of (damage)% of target's ",
             "[(type.damage_type==1){total}(type.damage_type==2){current}(type.damage_type==3){lost}]",
@@ -596,7 +596,7 @@
         }
     },
     "CRITI": {
-        "abbr_name": "imy. crit",
+        "abbr_name": "imu. crit",
         "full_name": "Immunity to Critical Hit",
         "tooltip": null,
         "format": [
@@ -643,10 +643,10 @@
         }
     },
     "POIATK": {
-        "abbr_name": "BC poison",
-        "full_name": "BC Poison",
+        "abbr_name": "toxic",
+        "full_name": "Toxic",
         "tooltip": null,
-        "format": "(prob)% chance to deal a poison damage of (mult)% of target's max health",
+        "format": "(prob)% chance to deal a toxic damage of (mult)% of target's max health",
         "class": {
             "prob": {
                 "name": "chance",
@@ -683,10 +683,10 @@
         }
     },
     "IMUPOIATK": {
-        "abbr_name": "imu. BC Poison",
-        "full_name": "Immune/Resistant to BC Poison",
+        "abbr_name": "imu. toxic",
+        "full_name": "Immune/Resistant to Toxic",
         "tooltip": null,
-        "format": "[(mult==100){Immune}(mult<100){(mult)% Resistant}] BC Poison damage",
+        "format": "[(mult==100){Immune}(mult<100){(mult)% Resistant}] toxic damage",
         "class": {
             "mult": {
                 "name": "percent",
