improve kr proc explanation

--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -397,12 +397,12 @@
         "full_name": "소환",
         "tooltip": "특정 발동 조건을 만족하면 일정 시간가 거리에 정해진 아군을 소환합니다. 유닛의 경우, 첫번째 형태로만 소환됩니다",
         "format": [
-            "(prob)% 확률로 (_dispTime(time)) 후에 [(!type.on_kill&!type.on_hit){거리 (dis) 앞에서}] [(_isEnemy){(mult)% 배율로}] (_entity(id)) 소환 (_left)",
+            "(prob)% 확률로 (_dispTime(time)) 후에 [(!type.on_kill&!type.on_hit){거리 (dis) [(dis<0){뒤}(dis>=0){앞}]에서}] [(_isEnemy){(mult)% 배율로}] (_entity(id)) 소환 (_left)",
             "[(!type.fix_buff&_isEnemy){소환자의 배율에 상대적으로 소환되고}] ",
 			"[(type.anim_type==3){ 버로우 능력을 지우고 }]",
             "[(type.on_hit|type.on_kill){[(type.on_hit){매 공격마다}",
             "(type.on_kill&!type.on_hit){상대를 죽일 때마다}]",
-            " 상대로부터 거리 (dis) 앞에서 }]",
+            " 상대로부터 거리 (dis) [(dis<0){뒤}(dis>=0){앞}]에서 }]",
             "[(type.ignore_limit){스테이지 제한에 상관없이}] ",
             "[(!type.random_layer){소환자의 레이어와 같은 곳에}",
             "(type.random_layer){렌덤한 레이어에}] ",
