[reformat] Remove type bitmask from battle data, replace <Identifier<Trait>> with simply Trait, and (untested) type-to-trait system for v4 packs
This is still not tested to see if it loads properly for custom entities, I'll be doing so soon

--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -393,7 +393,7 @@
     "SEAL": {
         "abbr_name": "seal",
         "full_name": "Seal",
-        "tooltip": "Seal will disable all abilities except Burrow, Metal, Suicide, Only-Attack, and basic Revive",
+        "tooltip": "Seal will disable all abilities except Burrow, Metal, Self-Destruct, Only-Attack, and basic Revive",
         "format": "(prob)% chance to seal target for (_dispTime(time)).",
         "class": {
             "prob": {
